Fix lead text on mobile

--- a/static/extensions.css
+++ b/static/extensions.css
@@ -72,3 +72,9 @@ pre > code {
 .lead {
   margin-top: -2em;
 }
+
+@media only screen and (max-width: 960px) {
+  .lead {
+    margin-top: -1.5em;
+  }
+}
